--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
   "author": "Julien Vincent",
   "license": "MIT",
   "devDependencies": {
+    "babel-loader": "^5.1.4",
+    "babel-runtime": "^5.5.8",
+    "browser-sync": "^2.7.12",
     "gulp": "^3.9.0",
-    "laravel-elixir": "^2.3.12"
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "laravel-elixir": "^2.3.12",
+    "node-libs-browser": "^0.5.2",
+    "webpack": "^1.9.11",
+    "yargs": "^3.11.0"
+  },
+  "dependencies": {
+    "flummox": "^3.5.2",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
+    "superagent": "^1.2.0"
   }
 }
