--- a/frontend/container/default.conf
+++ b/frontend/container/default.conf
@@ -7,6 +7,7 @@ server {
     location / {
         root   /data/www;
         index  index.html;
+        # try_files is here to enable react-routers "pretty URLS" (HistoryLocations).
         try_files $uri /index.html;
     }
 }
