--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/daniel_robinson/smart-raspberry-pi-alarm-system.git"
+    "url": "https://github.com/julienvincent/environment"
   },
   "author": "Julien Vincent",
   "license": "MIT",
