--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -1,19 +1,18 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=4UNDJzQPcbKv03IIO34bG4iyyCSgcBhy
+CORS_ADDRESS=http://your.domain.com
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=docker
+DB_USERNAME=root
+DB_PASSWORD=docker
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.mandrillapp.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
