tested proxy and set up correct docoer-compose configuration. Fixed CORS bug for backend.

--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=4UNDJzQPcbKv03IIO34bG4iyyCSgcBhy
-CORS_ADDRESS=http://your.domain.com
+CORS_ADDRESS=http://yourdomain.com
 
 DB_DATABASE=docker
 DB_USERNAME=root
@@ -16,3 +16,8 @@ MAIL_HOST=smtp.mandrillapp.com
 MAIL_PORT=587
 MAIL_USERNAME=
 MAIL_PASSWORD=
+
+S3_KEY=
+S3_SECRET=
+S3_REGION=eu-central-1
+S3_BUCKET=
