--- a/package.json
+++ b/package.json
@@ -12,20 +12,18 @@
   "author": "Julien Vincent",
   "license": "MIT",
   "devDependencies": {
-    "babel-loader": "^5.1.4",
-    "babel-runtime": "^5.5.8",
-    "browser-sync": "^2.7.12",
-    "gulp": "^3.9.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "laravel-elixir": "^2.3.12",
-    "node-libs-browser": "^0.5.2",
-    "webpack": "^1.9.11",
-    "yargs": "^3.11.0"
+    "browser-sync": "^2.7.12"
   },
   "dependencies": {
+    "babelify": "^6.3.0",
+    "classnames": "^2.1.3",
+    "compression": "^1.5.2",
+    "express": "^4.13.3",
     "flummox": "^3.5.2",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "react-tap-event-plugin": "^0.1.7",
+    "storm-serve": "https://github.com/projectstorm/serve.git",
     "superagent": "^1.2.0"
   }
 }
