--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-sync": "^2.7.12"
   },
   "dependencies": {
+    "babel-runtime": "^5.8.20",
     "babelify": "^6.3.0",
     "classnames": "^2.1.3",
     "compression": "^1.5.2",
@@ -23,7 +24,7 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "react-tap-event-plugin": "^0.1.7",
-    "storm-serve": "https://github.com/projectstorm/serve.git",
+    "storm-serve": "https://github.com/julienvincent/serve.git",
     "superagent": "^1.2.0"
   }
 }
