--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "classnames": "^2.1.3",
     "compression": "^1.5.2",
     "express": "^4.13.3",
-    "flummox": "^3.5.2",
     "history": "^1.9.1",
     "react": "^0.13.3",
+    "react-redux": "^3.0.0",
     "react-router": "^1.0.0-rc1",
     "react-tap-event-plugin": "^0.1.7",
+    "redux": "^3.0.0",
+    "redux-thunk": "^1.0.0",
     "storm-serve": "https://github.com/julienvincent/serve.git",
     "superagent": "^1.2.0"
   }
